--- a/src/app/modules/admin/pages/upload-document/upload-document.component.html
+++ b/src/app/modules/admin/pages/upload-document/upload-document.component.html
@@ -63,29 +63,32 @@
                 </div>
                 <table class="example-full-width mt-2" cellspacing="0">
                     <tr>
-                
+
 
                         <td>
                             <mat-form-field appearance="outline" class="w-full">
                                 <mat-label *transloco="let t" class="font-medium">{{t('state')}}</mat-label>
-                                <mat-select [formControlName]="'stateId'" (selectionChange)="onStateChange($event.value)">
+                                <mat-select [formControlName]="'stateId'"
+                                    (selectionChange)="onStateChange($event.value)">
                                     <mat-option [value]="null">Please Select</mat-option>
                                     <ng-container *ngFor="let stData of stateDropdown; trackBy: trackByFn">
                                         <mat-option [value]="stData.stateId">{{stData.stateName}}</mat-option>
                                     </ng-container>
                                 </mat-select>
                                 <mat-error *ngIf="uploadDocumentForm.get('stateId').hasError('required')">
-                                     Required
+                                    Required
                                 </mat-error>
                             </mat-form-field>
                         </td>
                         <td>
                             <mat-form-field appearance="outline" class="w-full">
                                 <mat-label *transloco="let t" class="font-medium">{{t('district')}}</mat-label>
-                                <mat-select [formControlName]="'districtId'" (selectionChange)="onDisctrictChange($event.value)">
+                                <mat-select [formControlName]="'districtId'"
+                                    (selectionChange)="onDisctrictChange($event.value)">
                                     <mat-option [value]="null">Please Select</mat-option>
                                     <ng-container *ngFor="let districtIData of districtDropdown; trackBy: trackByFn">
-                                        <mat-option [value]="districtIData.districtId">{{districtIData.districtName}}</mat-option>
+                                        <mat-option
+                                            [value]="districtIData.districtId">{{districtIData.districtName}}</mat-option>
                                     </ng-container>
                                 </mat-select>
                                 <mat-error *ngIf="uploadDocumentForm.get('districtId').hasError('required')">
@@ -107,25 +110,25 @@
                                 </mat-error>
                             </mat-form-field>
                         </td>
-                
+
                         <td><mat-form-field appearance="outline" class="example-full-width">
-                            <mat-label *transloco="let t" class="font-medium">{{ t('caseNo')}}</mat-label>
-                            <input matInput matInput [formControlName]="'caseNo'" maxlength="4" [required]="true">
-                            <mat-error *ngIf="uploadDocumentForm.get('caseNo').hasError('required')">
-                                Required
-                            </mat-error>
-                        </mat-form-field>
+                                <mat-label *transloco="let t" class="font-medium">{{ t('caseNo')}}</mat-label>
+                                <input matInput matInput [formControlName]="'caseNo'" maxlength="4" [required]="true">
+                                <mat-error *ngIf="uploadDocumentForm.get('caseNo').hasError('required')">
+                                    Required
+                                </mat-error>
+                            </mat-form-field>
 
-                    </td>
-                    <td><mat-form-field appearance="outline"  class="example-full-width">
-                        <mat-label *transloco="let t" class="font-medium">{{t('caseStatus')}}</mat-label>
-                        <input matInput matInput [formControlName]="'caseStatus'">
-                        <mat-error *ngIf="uploadDocumentForm.get('caseStatus').hasError('required')">
-                            Required
-                        </mat-error>
-                    </mat-form-field>
+                        </td>
+                        <td><mat-form-field appearance="outline" class="example-full-width">
+                                <mat-label *transloco="let t" class="font-medium">{{t('caseStatus')}}</mat-label>
+                                <input matInput matInput [formControlName]="'caseStatus'">
+                                <mat-error *ngIf="uploadDocumentForm.get('caseStatus').hasError('required')">
+                                    Required
+                                </mat-error>
+                            </mat-form-field>
 
-                </td>
+                        </td>
                     </tr>
                 </table>
 
@@ -165,52 +168,74 @@
 
                         </td>
                         <td><mat-form-field appearance="outline" class="example-full-width">
-                            <mat-label *transloco="let t" class="font-medium">{{ t('actSection')}}</mat-label>
-                            <input matInput matInput [formControlName]="'fName'" [required]="true">
-                            <mat-error *ngIf="uploadDocumentForm.get('fName').hasError('required')">
-                                Required
-                            </mat-error>
-                        </mat-form-field>
+                                <mat-label *transloco="let t" class="font-medium">{{ t('actSection')}}</mat-label>
+                                <input matInput matInput [formControlName]="'fName'" [required]="true">
+                                <mat-error *ngIf="uploadDocumentForm.get('fName').hasError('required')">
+                                    Required
+                                </mat-error>
+                            </mat-form-field>
 
-                    </td>
+                        </td>
                     </tr>
                 </table>
 
                 <table>
-                    
+
                 </table>
 
                 <div class="flex font-semibold text-2xl  whitespace-nowrap my-5 ">
                     <div>Files/Documents</div>
                 </div>
                 <div
-                    class="mb-5 mx-10 border-dashed border-2 border-primary-500 dark:bg-slate-700 bg-primary-50/50 rounded-lg h-auto max-h-[640px] min-h-[300px] ">
-
+                    class="mb-5 mx-10 border-dashed border-2 border-primary-500 dark:bg-slate-700 bg-primary-50/50 rounded-lg h-auto max-h-[640px] min-h-[300px]">
                     <div class="flex">
-                        <div
-                            class="m-auto text-center font-semibold h-[300px] py-24 text-lg w-full border-r-2 border-dashed border-primary-500"
-                            [ngClass]="{'bg-primary-50/50': dragging }"
-                            (dragenter)="onDragEnter()"
-                            (dragover)="onDragOver($event)"
-                            (dragleave)="onDragLeave()"
-                            (drop)="filesDropped($event)">
+                        <div class="m-auto text-center font-semibold h-[300px] py-24 text-lg w-full border-r-2 border-dashed border-primary-500"
+                            [ngClass]="{'bg-primary-50/50': dragging }" (dragenter)="onDragEnter()"
+                            (dragover)="onDragOver($event)" (dragleave)="onDragLeave()" (drop)="filesDropped($event)">
+
+                            <!-- Files preview section -->
                             <div class="flex justify-center flex-wrap">
-                                <img *ngFor="let img of imgUrls" [src]="img" class="w-[100px] h-[100px] object-cover m-1" alt="Image Preview">
-                                <img *ngIf="imgUrls.length === 0" src="../../../../../assets/icons/Files.svg" class="w-[100px]" alt="Processing Image">
+                                <!-- Preview images -->
+                                <div *ngFor="let img of imgUrls; let i = index" class="m-2 text-center">
+                                    <img [src]="img.preview" class="w-[100px] h-[100px] object-cover m-1"
+                                        alt="Image Preview">
+                                    <p class="text-xs text-gray-500">{{ img.name }}</p>
+                                </div>
+
+                                <!-- Preview PDFs (using a placeholder for PDF files) -->
+                                <div *ngFor="let pdf of pdfUrls; let i = index" class="m-2 text-center">
+                                    <img [src]="'assets/icons/pdf.svg'" class="w-[100px] h-[100px] object-cover m-1"
+                                        alt="PDF Preview">
+                                    <p class="text-xs text-gray-500">{{ pdf.name }}</p>
+                                </div>
+
+                                <!-- Default icon if no files are uploaded -->
+                                <img *ngIf="imgUrls.length === 0 && pdfUrls.length === 0"
+                                    src="../../../../../assets/icons/file.svg" class="w-[100px]"
+                                    alt="Processing Image">
                             </div>
-                            <div class="text-blue-700 hover:cursor-pointer" (click)="f_input.click()" matTooltip="Browse files">Browse files</div>
-                            <div class="text-gray-400 text-sm">Maximum allowed file size is 4MB per image</div>
-                            <div class="text-gray-400 text-sm">Only .jpeg, .jpg, and .png images are allowed</div>
-                            <input autocomplete="off" type="file" class="hidden" #f_input accept="image/png, image/jpeg" multiple
-                                (change)="selectImage(f_input.files)">
+
+                            <!-- Browse files link -->
+                            <div class="text-blue-700 hover:cursor-pointer" (click)="f_input.click()"
+                                matTooltip="Browse files">Browse files</div>
+
+                            <!-- File size and type constraints -->
+                            <div class="text-gray-400 text-sm">Maximum allowed file size is 10GB per file</div>
+                            <div class="text-gray-400 text-sm">Only .jpeg, .jpg, .png, and .pdf files are allowed</div>
+
+                            <!-- Hidden file input -->
+                            <input autocomplete="off" type="file" class="hidden" #f_input
+                                accept="image/png, image/jpeg, application/pdf" multiple
+                                (change)="selectFiles(f_input.files)">
                         </div>
                     </div>
                 </div>
 
+
+
                 <div class="flex items-center justify-end">
                     <button *transloco="let t" mat-button [color]="'accent'"
-                        [disabled]="uploadDocumentForm.pristine || uploadDocumentForm.untouched"
-                        (click)="clearForm()">
+                        [disabled]="uploadDocumentForm.pristine || uploadDocumentForm.untouched" (click)="clearForm()">
                         {{t('clear')}}
                     </button>
                     <button *transloco="let t" class="ml-2" mat-flat-button [color]="'primary'"
