--- a/src/app/layout/layouts/vertical/classy/classy.component.html
+++ b/src/app/layout/layouts/vertical/classy/classy.component.html
@@ -20,7 +20,7 @@
                     src="assets/images/KSPPCW-logo.png">
             </div>
             <div class="flex flex-col items-center justify-center w-full mt-6">
-                <div class="w-full mt-0.5 whitespace-nowrap text-ellipsis overflow-hidden text-center text-md leading-normal font-large text-secondary">
+                <div class="w-full mt-0.3 whitespace-nowrap text-ellipsis overflow-hidden text-center text-md leading-normal font-large text-light">
                     Record Room Management System
                 </div>
             </div>
