--- a/src/app/modules/admin/pages/search-document/search-document.component.html
+++ b/src/app/modules/admin/pages/search-document/search-document.component.html
@@ -243,6 +243,12 @@
                 </ng-container>
 
             
+                <ng-container matColumnDef="doc">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="bg-primary-300 dark:bg-slate-500 text-black"> Document </th>
+                    <td mat-cell *matCellDef="let row"> {{row.doc}} </td>
+                </ng-container>
+
+                
                 <!-- Action Column -->
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef class="bg-primary-300 dark:bg-slate-500 text-black"> Action </th>
