--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col flex-auto items-center sm:justify-center min-w-0 bg-cover bg-center" style="background-image: url('../../../../assets/images/homepage.jpg');">
+<div class="flex flex-col flex-auto items-center sm:justify-center min-w-0 bg-cover bg-center" style="background-image: url('../../../../assets/images/rrms.jpg');">
 
         <div class="w-full sm:w-auto py-3 px-2 sm:p-10 sm:rounded-2xl sm:shadow sm:bg-card">
             <div class="w-full max-w-80 sm:w-80 mx-auto sm:mx-0">
@@ -9,13 +9,13 @@
     
                 <!-- Title -->
                 <div class="mt-2 text-4xl font-extrabold tracking-tight leading-tight">Sign in</div>
-                <div class="flex items-baseline mt-0.5 font-medium">
+                <!-- <div class="flex items-baseline mt-0.5 font-medium">
                     <div>Don't have an account?</div>
                     <a
                         class="ml-1 text-primary-500 hover:underline"
                         [routerLink]="['/sign-up']">Sign up
                     </a>
-                </div>
+                </div> -->
     
                 <!-- Alert -->
                 <fuse-alert
