--- a/src/@fuse/components/navigation/vertical/vertical.component.html
+++ b/src/@fuse/components/navigation/vertical/vertical.component.html
@@ -19,62 +19,63 @@
 
         <!-- Items -->
         <ng-container *ngFor="let item of navigation; trackBy: trackByFn">
-
-            <!-- Skip the hidden items -->
-            <ng-container *ngIf="(item.hidden && !item.hidden(item)) || !item.hidden">
-
-                <!-- Aside -->
-                <ng-container *ngIf="item.type === 'aside'">
-                    <fuse-vertical-navigation-aside-item
-                        [item]="item"
-                        [name]="name"
-                        [activeItemId]="activeAsideItemId"
-                        [autoCollapse]="autoCollapse"
-                        [skipChildren]="true"
-                        (click)="toggleAside(item)"></fuse-vertical-navigation-aside-item>
-                </ng-container>
-
-                <!-- Basic -->
-                <ng-container *ngIf="item.type === 'basic'">
-                    <fuse-vertical-navigation-basic-item
-                        [item]="item"
-                        [name]="name"></fuse-vertical-navigation-basic-item>
-                </ng-container>
-
-                <!-- Collapsable -->
-                <ng-container *ngIf="item.type === 'collapsable'">
-                    <fuse-vertical-navigation-collapsable-item
-                        [item]="item"
-                        [name]="name"
-                        [autoCollapse]="autoCollapse"></fuse-vertical-navigation-collapsable-item>
-                </ng-container>
-
-                <!-- Divider -->
-                <ng-container *ngIf="item.type === 'divider'">
-                    <fuse-vertical-navigation-divider-item
-                        [item]="item"
-                        [name]="name"></fuse-vertical-navigation-divider-item>
-                </ng-container>
-
-                <!-- Group -->
-                <ng-container *ngIf="item.type === 'group'">
-                    <fuse-vertical-navigation-group-item
-                        [item]="item"
-                        [name]="name"
-                        [autoCollapse]="autoCollapse"></fuse-vertical-navigation-group-item>
-                </ng-container>
-
-                <!-- Spacer -->
-                <ng-container *ngIf="item.type === 'spacer'">
-                    <fuse-vertical-navigation-spacer-item
-                        [item]="item"
-                        [name]="name"></fuse-vertical-navigation-spacer-item>
-                </ng-container>
-
+            <ng-container *ngIf="!(item.hidden && !item.hidden(item)) || !item.hidden">
+              <!-- Aside -->
+              <ng-container *ngIf="item.type === 'aside'">
+                <fuse-vertical-navigation-aside-item
+                  [item]="item"
+                  [name]="name"
+                  [activeItemId]="activeAsideItemId"
+                  [autoCollapse]="autoCollapse"
+                  [skipChildren]="true"
+                  (click)="toggleAside(item)">
+                </fuse-vertical-navigation-aside-item>
+              </ng-container>
+          
+              <!-- Basic -->
+              <ng-container *ngIf="item.type === 'basic'">
+                <fuse-vertical-navigation-basic-item
+                  [item]="item"
+                  [name]="name">
+                </fuse-vertical-navigation-basic-item>
+              </ng-container>
+          
+              <!-- Collapsable -->
+              <ng-container *ngIf="item.type === 'collapsable'">
+                <fuse-vertical-navigation-collapsable-item
+                  [item]="item"
+                  [name]="name"
+                  [autoCollapse]="autoCollapse">
+                </fuse-vertical-navigation-collapsable-item>
+              </ng-container>
+          
+              <!-- Divider -->
+              <ng-container *ngIf="item.type === 'divider'">
+                <fuse-vertical-navigation-divider-item
+                  [item]="item"
+                  [name]="name">
+                </fuse-vertical-navigation-divider-item>
+              </ng-container>
+          
+              <!-- Group -->
+              <ng-container *ngIf="item.type === 'group'">
+                <fuse-vertical-navigation-group-item
+                  [item]="item"
+                  [name]="name"
+                  [autoCollapse]="autoCollapse">
+                </fuse-vertical-navigation-group-item>
+              </ng-container>
+          
+              <!-- Spacer -->
+              <ng-container *ngIf="item.type === 'spacer'">
+                <fuse-vertical-navigation-spacer-item
+                  [item]="item"
+                  [name]="name">
+                </fuse-vertical-navigation-spacer-item>
+              </ng-container>
             </ng-container>
-
-        </ng-container>
-
+          </ng-container>
+          
         <!-- Content footer -->
         <div class="fuse-vertical-navigation-content-footer">
             <ng-content select="[fuseVerticalNavigationContentFooter]"></ng-content>
